; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-file.c_ui_init_save_file.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-file.c_ui_init_save_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i8*)*, i32 }

@PATH_MAX = common dso_local global i32 0, align 4
@fc = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str = private unnamed_addr constant [2 x i8] c".\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ui_init_save_file(i8* %0, i32 (i8*)* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32 (i8*)*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 (i8*)* %1, i32 (i8*)** %4, align 8
  %8 = load i32, i32* @PATH_MAX, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %5, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %6, align 8
  %12 = load i32 (i8*)*, i32 (i8*)** %4, align 8
  store i32 (i8*)* %12, i32 (i8*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @fc, i32 0, i32 0), align 8
  %13 = load i8*, i8** %3, align 8
  %14 = trunc i64 %9 to i32
  %15 = call i32 @fz_strlcpy(i8* %11, i8* %13, i32 %14)
  store i8* %11, i8** %7, align 8
  br label %16

16:                                               ; preds = %28, %2
  %17 = load i8*, i8** %7, align 8
  %18 = load i8, i8* %17, align 1
  %19 = icmp ne i8 %18, 0
  br i1 %19, label %20, label %31

20:                                               ; preds = %16
  %21 = load i8*, i8** %7, align 8
  %22 = load i8, i8* %21, align 1
  %23 = sext i8 %22 to i32
  %24 = icmp eq i32 %23, 92
  br i1 %24, label %25, label %27

25:                                               ; preds = %20
  %26 = load i8*, i8** %7, align 8
  store i8 47, i8* %26, align 1
  br label %27

27:                                               ; preds = %25, %20
  br label %28

28:                                               ; preds = %27
  %29 = load i8*, i8** %7, align 8
  %30 = getelementptr inbounds i8, i8* %29, i32 1
  store i8* %30, i8** %7, align 8
  br label %16

31:                                               ; preds = %16
  %32 = call i32 @fz_cleanname(i8* %11)
  %33 = call i8* @strrchr(i8* %11, i8 signext 47)
  store i8* %33, i8** %7, align 8
  %34 = load i8*, i8** %7, align 8
  %35 = icmp ne i8* %34, null
  br i1 %35, label %36, label %42

36:                                               ; preds = %31
  %37 = load i8*, i8** %7, align 8
  store i8 0, i8* %37, align 1
  %38 = call i32 @load_dir(i8* %11)
  %39 = load i8*, i8** %7, align 8
  %40 = getelementptr inbounds i8, i8* %39, i64 1
  %41 = call i32 @ui_input_init(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @fc, i32 0, i32 1), i8* %40)
  br label %45

42:                                               ; preds = %31
  %43 = call i32 @load_dir(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %44 = call i32 @ui_input_init(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @fc, i32 0, i32 1), i8* %11)
  br label %45

45:                                               ; preds = %42, %36
  %46 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %46)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @fz_strlcpy(i8*, i8*, i32) #2

declare dso_local i32 @fz_cleanname(i8*) #2

declare dso_local i8* @strrchr(i8*, i8 signext) #2

declare dso_local i32 @load_dir(i8*) #2

declare dso_local i32 @ui_input_init(i32*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
